--- a/flower_shop_/stylles/home.css
+++ b/flower_shop_/stylles/home.css
@@ -1,22 +1,11 @@
-/* @font-face {
-  font-family: miltonian;
-  src: url(../fonts/Miltonian/Miltonian-Regular.ttf);
-}
-@font-face {
-  font-family: monda;
-  src: url(../fonts/monda/monda.regular.ttf);
-}
-
-  @font-face {
-    font-family: montserrat;
-    src: url(../fonts/Montserrat/Montserrat-Italic-VariableFont_wght.ttf);
-  } */
 main {
   background: var(--background-image);
   background-size: cover;
   margin: 0%;
 }
-
+.order_fast {
+  text-align: center;
+}
 .order_now {
   font-family: miltonian;
   background-color: var(--purple-background);
@@ -27,8 +16,11 @@ main {
   line-height: 40px;
   border: 1px solid var(--main-border);
 }
+.line {
+  display: none;
+}
 .shoping_now {
-  align-items: center;
+  text-align: center;
   font-family: montserrat;
 }
 .assortment {
