--- a/flower_shop_/stylles/header.css
+++ b/flower_shop_/stylles/header.css
@@ -16,7 +16,7 @@ header img {
   transition: all 30px;
 }
 .background {
-  background-color: rgba(104, 78, 78, 0.7);
+  background-color: rgba(60, 52, 52, 0.7);
   transition: background-color 0.3s ease;
 }
 .background:hover {
@@ -58,7 +58,6 @@ nav a:hover {
   background: var(--purple-hover-background);
 }
 nav a:nth-child(2) {
-  /* margin: 0 120px; */
   padding: 20px;
 }
 nav button {
@@ -74,9 +73,16 @@ nav button {
   text-decoration-line: underline;
   background-color: var(--purple-background);
 }
-.flower:hover img {
-  transform: scale(1.1);
-  box-shadow: 0 2px 4px rgba(0, 0, 0, 0.4);
+.flower img:hover {
+  transform: scale(1.2);
+  box-shadow: 0 8px 12px rgba(74, 7, 71, 0.723);
+}
+.transparent-block {
+  opacity: 0.7;
+}
+
+.transparent-block:hover {
+  opacity: 1;
 }
 @media screen and (max-width: 980px) {
   header img {
@@ -143,5 +149,9 @@ nav button {
     display: block !important;
     width: 154px;
     height: 1px;
+  }
+  .flower img:hover {
+    transform: none;
+    box-shadow: 0 8px 12px rgba(74, 7, 71, 0.723);
   }
 }
