--- a/flower_shop_/stylles/contact_us.css
+++ b/flower_shop_/stylles/contact_us.css
@@ -32,6 +32,9 @@ h2 {
   display: flex;
   flex-direction: column;
   align-items: center;
+  opacity: 0;
+  transform: scale(2);
+  animation: formAnimation 1s forwards;
 }
 .contact_info span {
   text-decoration: underline;
@@ -75,4 +78,14 @@ h2 {
 }
 .contact_form input[type="submit"]:hover {
   background-color: var(--main-hover-background);
+}
+@keyframes formAnimation {
+  200% {
+    opacity: 0;
+    transform: scale(2);
+  }
+  100% {
+    opacity: 1;
+    transform: scale(1);
+  }
 }
