--- a/flower_shop_/stylles/header.css
+++ b/flower_shop_/stylles/header.css
@@ -13,7 +13,7 @@ header img {
 .flower img {
   max-width: 150px;
   margin: 0 150px;
-  transition: all 30px;
+  transition: transform 0.4s;
 }
 .background {
   background-color: rgba(60, 52, 52, 0.7);
@@ -74,7 +74,7 @@ nav button {
   background-color: var(--purple-background);
 }
 .flower img:hover {
-  transform: scale(1.2);
+  transform: scale(1.8);
   box-shadow: 0 8px 12px rgba(74, 7, 71, 0.723);
 }
 .transparent-block {
@@ -83,6 +83,14 @@ nav button {
 
 .transparent-block:hover {
   opacity: 1;
+}
+.assortment_container {
+  opacity: 1;
+  transition: opacity 0.3s;
+}
+
+.assortment_container:hover {
+  opacity: 0.7;
 }
 @media screen and (max-width: 980px) {
   header img {
