--- a/workshop1/blok/style.css
+++ b/workshop1/blok/style.css
@@ -10,14 +10,14 @@ body {
 .header {
   box-sizing: border-box;
   background-image: url(../photo_workshop/home.png);
-  width: 1903px;
+  width: 1750px;
   background-size: contain;
   background-repeat: no-repeat;
 }
 .header_top {
   display: flex;
-  padding-top: 136px;
-  height: 81px;
+  padding-top: 120px;
+  height: 80px;
   justify-content: center;
 }
 @media screen and (max-width: 1600px) {
@@ -51,7 +51,7 @@ body {
   line-height: 104.5%;
 }
 .header .header_center {
-  padding-top: 140px;
+  padding-top: 83px;
   display: flex;
   flex-direction: column;
   justify-content: center;
@@ -62,43 +62,65 @@ body {
   text-align: center;
   font-size: 50px;
   font-weight: 800;
-  line-height: 118.5%;
-  margin-bottom: 15px;
+  line-height: 120%;
+  margin-bottom: 20px;
 }
 .header .header_center p {
   width: 520px;
   color: #F2F2F2;
   text-align: center;
-  font-size: 14px;
+  font-size: 12px;
   font-weight: 600;
-  line-height: 22px;
+  line-height: 16px;
 }
 .header .header_center .icon {
   display: flex;
   flex-direction: row;
   justify-content: center;
-  width: 362px;
+  width: 350px;
   height: 100px;
   gap: 100px;
 }
-.header .header_center .wrench_group {
-  text-decoration: none;
+.wrench {
+  display: flex;
+  padding: 80px;
+}
+.wrench_group {
+  position: relative;
   width: 100px;
   height: 100px;
+  overflow: hidden;
+}
+
+.wrench_group img {
+  max-width: 100%;
+  height: auto;
+  display: block;
+  margin: 0 auto;
+}
+.rhombus {
+  height: 125px;
+  margin: 0 100px;
+}
+.header .header_center .wrench_group {
+  text-decoration: none;
+  width: 130px;
+  height: 100px;
   color: #FFF;
+  bottom: 120px
 }
 .header .header_center .wrench_name {
   display: block;
-  width: 110px;
+  width: 93px;
+  margin: 66px 45px;
 }
 .header .header_center .button {
-  padding-top: 110px;
-  padding-bottom: 116px;
+  padding-bottom: 120px;
 }
 .header .header_center .button .button_help {
   border-radius: 10px;
-  width: 192px;
-  height: 62px;
+  width: 200px;
+  height: 60px;
   background-color: #50B2EA;
   border: 1px solid #F2F2F2;
   color: #F2F2F2;
@@ -106,6 +128,7 @@ body {
   text-decoration: none;
   display: inline-block;
   font-size: 20px;
+  margin-top: 34px;
 }
 .header .header_center .button .button_help:hover {
   background-color: #19435A;
@@ -116,17 +139,17 @@ main .section_1 {
   margin: 0;
   box-sizing: border-box;
   background-color: #50B2EA;
-  height: 763px;
-  width: 1903px;
+  height: 750px;
+  width: 1900px;
 }
 main .section_1 .grey_color {
-  height: 763px;
-  width: 912px;
+  height: 770px;
+  width: 915px;
   background-color: #F2F2F2;
 }
 main .section_1 .content {
   box-sizing: border-box;
-  width: 1199px;
+  width: 1200px;
   height: 509px;
   border-radius: 40px;
   border: 4px solid #F2F2F2;
@@ -141,13 +164,13 @@ main .section_1 .content {
 }
 main .section_1 .content .right_content {
   width: 640px;
-  height: 509px;
+  height: 515px;
   margin-top: 90px;
   margin-left: 45px;
 }
 main .section_1 .content .right_content h2 {
   color: #FFF;
-  font-size: 58px;
+  font-size: 52px;
   font-style: normal;
   font-weight: bold;
 }
@@ -195,11 +218,10 @@ main .section_1 .button .button_help_section:hover {
 }
 @media screen and (max-width: 1600px) {
   main .section_1 {
-    width: 1785px;
+    width: 1750px;
   }
   main .section_1 .content {
     left: 275px;
-    top: 840px;
   }
   main .section_1 .button {
     top: 1395px;
@@ -213,28 +235,28 @@ main .services {
 }
 @media screen and (max-width: 1600px) {
   main .services {
-    width: 1783px;
+    width: 1750px;
   }
   main .services_top_content h2 {
     padding-top: 0;
   }
   main .services .button {
     top: 2135px;
-    left: 857px;
+    left: 835px;
   }
 }
 main .services h2 {
   color: #FFF;
   text-align: center;
-  font-size: 58px;
+  font-size: 48px;
   font-weight: bold;
-  padding-top: 35px;
+  height: 170px;
 }
-main .services_icon {
+main .services-icon {
   width: 300px;
   height: 300px;
 }
-main .services_top {
+main .services-top {
   height: 420px;
   background-image: url(../photo_workshop/cover-decor.png);
   filter: opacity(30%);
@@ -242,20 +264,17 @@ main .services_top {
 main .services_top_content {
   display: flex;
   flex-direction: column;
-  position: absolute;
-  left: 300px;
-  top: 1580px;
+  padding: 25px;
 }
 main .services_top_content_icon_group {
   height: 180px;
+  width: 1650px;
   color: #F2F2F2;
-  width: 1600px;
   gap: 83px;
 }
 main .services_bottom {
   height: 260px;
   background-color: #F2F2F2;
-  z-index: 10;
   padding-top: 28px;
 }
 main .services_bottom h3 {
@@ -276,8 +295,8 @@ main .services_bottom p {
   margin: 0 auto;
 }
 main .button {
-  top: 2185px;
-  left: 857px;
+  top: 2040px;
+  left: 835px;
   position: absolute;
 }
 main .button .button_help_services {
@@ -297,13 +316,13 @@ main .button .button_help_services:hover {
   box-shadow: 0 4px 8px 0 rgba(245, 239, 239, 0.2), 0 6px 20px 0 #F2F2F2;
 }
 main .testymonials {
-  width: 1903px;
-  height: 718px;
+  width: 1750px;
+  height: 665px;
   background-color: #50B2EA;
 }
 @media screen and (max-width: 1600px) {
   main .testymonials {
-    width: 1783px;
+    width: 1750px;
   }
 }
 main .testymonials h2 {
@@ -363,7 +382,7 @@ main .testymonials .container .vision_list_item .photo2 {
 main .contact {
   margin: 0;
   padding-top: 30px;
-  width: 1903px;
+  width: 1750px;
   height: 520px;
   background-color: #F2F2F2;
 }
@@ -406,7 +425,7 @@ main .contact_form .form_size_mail {
 }
 @media screen and (max-width: 1600px) {
   main .contact {
-    width: 1783px;
+    width: 1750px;
   }
 }
 .footer {
@@ -416,7 +435,7 @@ main .contact_form .form_size_mail {
 }
 @media screen and (max-width: 1600px) {
   .footer {
-    width: 1783px;
+    width: 1750px;
     height: 80px;
   }
 }
