--- a/workshop1/blok/variables.scss
+++ b/workshop1/blok/variables.scss
@@ -1,3 +1,4 @@
-$main_color: #50B2EA;;
-$secondary_color: #F2F2F2;
-$footer_color: #19435A;
+$primary_color: #50B2EA;
+$secondary_color: #19435A;
+$background_color: #F2F2F2;
+$text_color: #F2F2F2;
