--- a/workshop1/blok/main.scss
+++ b/workshop1/blok/main.scss
@@ -1,65 +1,216 @@
-main {
-    .section_1 {
-        margin: 0;
-        box-sizing: border-box;
-        background-color: --main_color;
-        height: 763px;
-        width: 1903px;
+html {
+    margin: 0;
+    box-sizing: border-box;
+}
 
-        .grey_color {
-            height: 763px;
-            width: 912px;
-            background-color: --secondary_color;
+body {
+    font-family: sans-serif;
+}
+
+.header {
+    box-sizing: border-box;
+    background-image: url(../photo_workshop/home.png);
+    width: 1750px;
+    background-size: contain;
+    background-repeat: no-repeat;
+
+    .header_top {
+        display: flex;
+        padding-top: 120px;
+        height: 80px;
+        justify-content: center;
+
+        @media screen and (max-width: 1600px) {
+            width: 1900px;
+            padding-top: 30px;
         }
 
-        .content {
-            box-sizing: border-box;
-            width: 1199px;
-            height: 509px;
-            border-radius: 40px;
-            border: 4px solid --secondary_color;
-            background: --main_color;
+        .img_logo {
+            width: 80px;
+            height: 87px;
+        }
+
+        .name_logo {
+            color: $text-color;
+            text-transform: uppercase;
+            height: 81px;
+            width: 324px;
+
+            h3 {
+                font-weight: bold;
+                font-size: 46px;
+                letter-spacing: 0.2px;
+                line-height: 104.5%;
+                margin-bottom: 0;
+            }
+
+            p {
+                font-weight: bold;
+                text-align: center;
+                font-size: 32px;
+                letter-spacing: 20px;
+                line-height: 104.5%;
+            }
+        }
+    }
+
+    .header_center {
+        padding-top: 83px;
+        display: flex;
+        flex-direction: column;
+        justify-content: center;
+        align-items: center;
+
+        h1 {
+            color: $text-color;
+            text-align: center;
+            font-size: 50px;
+            font-weight: 800;
+            line-height: 120%;
+            margin-bottom: 20px;
+        }
+
+        p {
+            width: 520px;
+            color: $text-color;
+            text-align: center;
+            font-size: 12px;
+            font-weight: 600;
+            line-height: 16px;
+        }
+
+        .icon {
             display: flex;
             flex-direction: row;
-            align-items: center;
             justify-content: center;
-            position: absolute;
-            left: 275px;
-            top: 940px;
+            width: 350px;
+            height: 100px;
+            gap: 100px;
+        }
 
-            .right_content {
-                width: 640px;
-                height: 509px;
-                margin-top: 90px;
-                margin-left: 45px;
+        .wrench {
+            display: flex;
+            padding: 80px;
+        }
 
-                & h2 {
-                    color: #FFF;
-                    font-size: 58px;
-                    font-style: normal;
-                    font-weight: bold;
-                }
+        .wrench_group {
+            position: relative;
+            width: 100px;
+            height: 100px;
+            overflow: hidden;
 
-                & p {
-                    width: 520px;
-                    height: 110px;
-                    margin-top: 20px;
-                    margin-bottom: 30px;
-                    color: --footer_color;
-                    font-size: 14px;
-                    font-weight: 400;
-                    line-height: 22px;
-                }
+            img {
+                max-width: 100%;
+                height: auto;
+                display: block;
+                margin: 0 auto;
             }
+        }
 
-            .wrench {
-                display: flex;
-                flex-direction: row;
-                color: #FFF;
+        .rhombus {
+            height: 125px;
+            margin: 0 100px;
+        }
+
+        .wrench_group {
+            text-decoration: none;
+            width: 130px;
+            height: 100px;
+            color: $text-color;
+            bottom: 120px;
+
+            .wrench_name {
+                display: block;
+                width: 93px;
+                margin: 66px 45px;
+            }
+        }
+
+        .button {
+            padding-bottom: 120px;
+
+            .button_help {
+                border-radius: 10px;
+                width: 200px;
+                height: 60px;
+                background-color: $primary-color;
+                border: 1px solid $text-color;
+                color: $text-color;
+                text-align: center;
                 text-decoration: none;
-                padding-bottom: 20px;
-                padding-right: 14px;
+                display: inline-block;
+                font-size: 20px;
+                margin-top: 34px;
+
+                &:hover {
+                    background-color: $secondary-color;
+                    box-shadow: 0 4px 8px 0 rgba(245, 239, 239, 0.2), 0 6px 20px 0 $text-color;
+                }
             }
+        }
+    }
+}
+
+main .section_1 {
+    margin: 0;
+    box-sizing: border-box;
+    background-color: $primary-color;
+    height: 750px;
+    width: 1900px;
+
+    .grey_color {
+        height: 770px;
+        width: 915px;
+        background-color: $background-color;
+    }
+
+    .content {
+        box-sizing: border-box;
+        width: 1200px;
+        height: 509px;
+        border-radius: 40px;
+        border: 4px solid $background-color;
+        background: $primary-color;
+        display: flex;
+        flex-direction: row;
+        align-items: center;
+        justify-content: center;
+        position: absolute;
+        left: 275px;
+        top: 940px;
+
+        .right_content {
+            width: 640px;
+            height: 515px;
+            margin-top: 90px;
+            margin-left: 45px;
+
+            h2 {
+                color: $text-color;
+                font-size: 52px;
+                font-style: normal;
+                font-weight: bold;
+            }
+
+            p {
+                width: 520px;
+                height: 110px;
+                margin-top: 20px;
+                margin-bottom: 30px;
+                color: $secondary-color;
+                font-size: 14px;
+                font-weight: 400;
+                line-height: 22px;
+            }
+        }
+
+        .icon {
+            display: flex;
+            flex-direction: row;
+            color: $text-color;
+            text-decoration: none;
+            padding-bottom: 20px;
+            padding-right: 14px;
 
             .icon_content {
                 padding-left: 14px;
@@ -75,273 +226,265 @@ main {
                 border-radius: 10px;
                 width: 192px;
                 height: 62px;
-                background-color: --main_color;
-                border: 1px solid --secondary_color;
-                color: --secondary-color;
+                background-color: $primary-color;
+                border: 1px solid $text-color;
+                color: $text-color;
                 text-align: center;
                 text-decoration: none;
                 display: inline-block;
                 font-size: 20px;
 
                 &:hover {
-                    background-color: --footer_color;
-                    box-shadow: 0 4px 8px 0 rgba(245, 239, 239, 0.2), 0 6px 20px 0 --secondary_color;
+                    background-color: $secondary-color;
+                    box-shadow: 0 4px 8px 0 rgba(245, 239, 239, 0.2), 0 6px 20px 0 $text-color;
                 }
             }
         }
 
         @media screen and (max-width: 1600px) {
-            & {
-                width: 1785px;
+            width: 1750px;
 
-                .content {
-                    left: 275px;
-                    top: 840px;
-                }
+            .content {
+                left: 275px;
+            }
 
-                .button {
-                    top: 1395px;
-                    left: 857px;
-                }
+            .button {
+                top: 1395px;
+                left: 857px;
             }
         }
     }
+}
 
-    .services {
-        width: 1903px;
-        height: 674px;
-        background-color: --main_color;
+main .services {
+    width: 1903px;
+    height: 674px;
+    background-color: $primary-color;
 
-        @media screen and (max-width: 1600px) {
-            & {
-                width: 1783px;
+    h2 {
+        color: $text-color;
+        text-align: center;
+        font-size: 48px;
+        font-weight: bold;
+        height: 170px;
+    }
 
-                &-top_content {
-                    h2 {
-                        padding-top: 0;
-                    }
-                }
+    .services-icon {
+        width: 300px;
+        height: 300px;
+    }
 
-                .button {
-                    top: 2135px;
-                    left: 857px;
-                }
-            }
+    .services-top {
+        height: 420px;
+        background-image: url(../photo_workshop/cover-decor.png);
+        filter: opacity(30%);
+    }
+
+    .services_top_content {
+        display: flex;
+        flex-direction: column;
+        padding: 25px;
+    }
+
+    .services_top_content_icon_group {
+        height: 180px;
+        width: 1650px;
+        color: $text-color;
+        gap: 83px;
+    }
+
+    .services_bottom {
+        height: 260px;
+        background-color: $background-color;
+        padding-top: 28px;
+
+        h3 {
+            color: $primary-color;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 22px;
         }
 
-        h2 {
-            color: #FFF;
+        p {
+            color: $secondary-color;
             text-align: center;
-            font-size: 58px;
-            font-weight: bold;
-            padding-top: 35px;
-        }
-
-        &-wrench {
-            width: 300px;
-            height: 300px;
-        }
-
-        &-top {
-            height: 420px;
-            background-image: url(../photo_workshop/cover-decor.png);
-            filter: opacity(30%);
-        }
-
-        &-top_content {
-            display: flex;
-            flex-direction: column;
-            position: absolute;
-            left: 300px;
-            top: 1580px;
-
-            &-icon_group {
-                height: 180px;
-                color: --secondary_color;
-                width: 1600px;
-                gap: 83px;
-            }
-        }
-
-        &-bottom {
-            height: 260px;
-            background-color: --secondary_color;
-            z-index: 10;
-            padding-top: 28px;
-
-            h3 {
-                color: --main_color;
-                font-size: 18px;
-                font-weight: 700;
-                line-height: 22px;
-            }
-
-            p {
-                color: --footer_color;
-                text-align: center;
-                font-size: 14px;
-                font-weight: 400;
-                line-height: 22px;
-                padding-top: 14px;
-                height: 66px;
-                width: 180px;
-                margin: 0 auto;
-            }
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 22px;
+            padding-top: 14px;
+            height: 66px;
+            width: 180px;
+            margin: 0 auto;
         }
     }
 
     .button {
-        top: 2185px;
-        left: 857px;
+        top: 2040px;
+        left: 835px;
         position: absolute;
 
         .button_help_services {
             border-radius: 10px;
             width: 192px;
             height: 62px;
-            background-color: --main_color;
-            border: 1px solid --secondary_color;
-            color: --secondary_color;
+            background-color: $primary-color;
+            border: 1px solid $text-color;
+            color: $text-color;
             text-align: center;
             text-decoration: none;
             display: inline-block;
             font-size: 20px;
 
             &:hover {
-                background-color: --footer_color;
-                box-shadow: 0 4px 8px 0 rgba(245, 239, 239, 0.2), 0 6px 20px 0 --secondary_color;
+                background-color: $secondary-color;
+                box-shadow: 0 4px 8px 0 rgba(245, 239, 239, 0.2), 0 6px 20px 0 $text-color;
             }
         }
     }
 
-    .testymonials {
-        width: 1903px;
-        height: 718px;
-        background-color: --main_color;
+    @media screen and (max-width: 1600px) {
+        width: 1750px;
 
-        @media screen and (max-width: 1600px) {
-            & {
-                width: 1783px;
-            }
+        .services_top_content h2 {
+            padding-top: 0;
         }
 
-        h2 {
-            color: --secondary_color;
-            font-size: 58px;
-            text-align: center;
-            font-style: normal;
-            font-weight: bold;
-            padding-top: 30px;
+        .button {
+            top: 2135px;
+            left: 835px;
+        }
+    }
+}
+
+main .testymonials {
+    width: 1750px;
+    height: 665px;
+    background-color: $primary-color;
+
+    h2 {
+        color: $text-color;
+        font-size: 58px;
+        text-align: center;
+        font-style: normal;
+        font-weight: bold;
+        padding-top: 30px;
+        padding-bottom: 30px;
+    }
+
+    .testymonials_text_content {
+        display: flex;
+        flex-direction: column;
+
+        .stars {
+            display: flex;
+            padding-left: 14px;
             padding-bottom: 30px;
         }
 
-        &-text_content {
-            display: flex;
-            flex-direction: column;
-
-            .star {
-                display: flex;
-                padding-left: 14px;
-                padding-bottom: 30px;
-            }
-
-            h3 {
-                padding-top: 25px;
-                padding-left: 14px;
-                color: --main_color;
-                font-size: 18px;
-                font-weight: 700;
-                line-height: 22px;
-            }
-
-            p {
-                color: --footer_color;
-                font-size: 14px;
-                font-weight: 400;
-                line-height: 22px;
-                width: 423px;
-                height: 110px;
-                padding-top: 8px;
-                padding-left: 14px;
-            }
+        h3 {
+            padding-top: 25px;
+            padding-left: 14px;
+            color: $primary-color;
+            font-size: 18px;
+            font-weight: 700;
+            line-height: 22px;
         }
 
-        .container {
-            width: 1200px;
+        p {
+            color: $secondary-color;
+            font-size: 14px;
+            font-weight: 400;
+            line-height: 22px;
+            width: 423px;
+            height: 110px;
+            padding-top: 8px;
+            padding-left: 14px;
+        }
+    }
 
-            .vision_list_item {
-                margin: 0;
-                display: flex;
-                flex-direction: row;
-                border-radius: 48px;
-                width: 577px;
-                height: 233px;
-                background-color: --secondary_color;
+    .container {
+        width: 1200px;
 
-                .photo2 {
-                    padding-top: 30px;
-                    padding-left: 20px;
-                    width: 80px;
-                    height: 80px;
-                }
+        .vision_list_item {
+            margin: 0;
+            display: flex;
+            flex-direction: row;
+            border-radius: 48px;
+            width: 577px;
+            height: 233px;
+            background-color: $background-color;
+
+            .photo2 {
+                padding-top: 30px;
+                padding-left: 20px;
+                width: 80px;
+                height: 80px;
             }
         }
     }
 
-    .contact {
-        margin: 0;
-        padding-top: 30px;
-        width: 1903px;
-        height: 520px;
-        background-color: --secondary_color;
+    @media screen and (max-width: 1600px) {
+        width: 1750px;
+    }
+}
 
-        &-form input[type="text"]:hover {
-            background-color: --footer_color;
-        }
+main .contact {
+    margin: 0;
+    padding-top: 30px;
+    width: 1750px;
+    height: 520px;
+    background-color: $background-color;
 
-        &-form input[type="email"]:hover {
-            background-color: --main_color;
+    h2 {
+        color: $primary-color;
+        text-align: center;
+        font-size: 58px;
+        font-weight: bold;
+        line-height: normal;
+    }
+
+    .contact_form {
+        display: flex;
+        flex-direction: column;
+        align-items: center;
+        justify-content: baseline;
+
+        .form_size {
+            margin-top: 14px;
+            padding: 20px;
+            width: 370px;
+            height: 64px;
+            border-radius: 40px;
             opacity: 0.5;
+            background-color: $primary-color;
+
+            &:hover {
+                background-color: $secondary-color;
+            }
         }
 
-        h2 {
-            color: --main_color;
-            text-align: center;
-            font-size: 58px;
-            font-weight: bold;
-            line-height: normal;
-        }
-
-        &-form {
-            display: flex;
-            flex-direction: column;
-            align-items: center;
-            justify-content: baseline;
-
-            .form_size {
-                margin-top: 14px;
-                padding: 20px;
-                width: 370px;
-                height: 64px;
-                border-radius: 40px;
-                opacity: 0.5;
-                background-color: --main_color;
-            }
-
-            .form_size_mail {
-                margin-top: 14px;
-                padding: 20px;
-                width: 184px;
-                height: 64px;
-                border-radius: 40px;
-                background-color: --main_color;
-            }
+        .form_size_mail {
+            margin-top: 14px;
+            padding: 20px;
+            width: 184px;
+            height: 64px;
+            border-radius: 40px;
+            background-color: $primary-color;
         }
 
         @media screen and (max-width: 1600px) {
-            & {
-                width: 1783px;
-            }
+            width: 1750px;
         }
+    }
+}
+
+.footer {
+    width: 100%;
+    height: 80px;
+    background: $secondary-color;
+
+    @media screen and (max-width: 1600px) {
+        width: 1750px;
+        height: 80px;
     }
 }
